js/src/tests/test262/built-ins/NativeErrors/SyntaxError/name.js
verifyProperty
(
SyntaxError
"
name
"
{
value
:
"
SyntaxError
"
writable
:
false
enumerable
:
false
configurable
:
true
}
)
;
reportCompare
(
0
0
)
;
